# simsoil

./: .gitignore  LICENSE  README.md  REFERENCES.md  setup.cfg
docs/: build.sh  core.html  index.html  transpiration.html
simsoil/: __init__.py  core.py  transpiration.py
simsoil/tests/: tests.py
