[metadata]
name = simsoil
version = 0.1.0
author = K. Arthur Endsley
author_email = arthur.endsley@ntsg.umt.edu
description = Very simple, point-scale soil hydrology model
long_description = file: README.md
long_description_content_type = text/markdown
classifiers =
    Programming Language :: Python :: 3
    Development Status :: 3 - Alpha
    Intended Audience :: Science/Research
    Topic :: Scientific/Engineering
    Topic :: Scientific/Engineering :: GIS
    Topic :: Scientific/Engineering :: Hydrology

[options]
packages = simsoil
py_modules = core, transpiration
python_requires = >=3.5
install_requires =
    scipy>=1.3
    numpy>=1.13.3
    cached_property>=1.5.1

[options.extras_require]
docs = pdoc3>=0.9.2
